--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -28,6 +28,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_contracts_excel(auswahl : int, excel_path : str):\n",
+    "\n",
+    "    dict_auswahl_prefix = {\n",
+    "        0 : \"\",\n",
+    "        1 : \"STOXX_\"\n",
+    "    }\n",
+    "\n",
+    "    wb = load_workbook(excel_path, data_only=True, keep_vba=True)\n",
+    "    Ueberhaenge_sheet = wb['Ueberhaenge']\n",
+    "    heute = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"G5\")).value\n",
+    "    expiry = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"G3\")).value\n",
+    "    expiry_1 = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"R6\")).value\n",
+    "    stock_price = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"X4\")).value\n",
+    "    InterestRate = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"N3\")).value\n",
+    "    ZentralKurs =  Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"C3\")).value  \n",
+    "    volatility = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"N4\")).value\n",
+    "\n",
+    "    Summery_sheet = wb[f'{dict_auswahl_prefix[auswahl]}Summery']\n",
+    "    nbd_heute = Summery_sheet.cell(*coordinate_to_tuple(\"C9\")).value\n",
+    "   \n",
+    "    nbd_last = Summery_sheet.cell(*coordinate_to_tuple(\"C9\")).value\n",
+    "    nbd_last = next_business_day(heute)\n",
+    "    nbd_dict = {'heute' : nbd_heute, 'last' : nbd_last}\n",
+    "\n",
+    "\n",
+    "    tage_bis_verfall = (expiry - heute).days #+ 1\n",
+    "\n",
+    "    print(f\"tage_bis_verfall = {tage_bis_verfall}\")\n",
+    "    print(f\"stock_price = {stock_price}\")\n",
+    "    print(f\"InterestRate = {InterestRate}\")\n",
+    "    print(f\"volatility = {volatility}\")\n",
+    "    print(f\"InterestRate = {InterestRate}\")\n",
+    "\n",
+    "\n",
+    "    dict_prod_bus = {}\n",
+    "    for productdate_idx in [0,1]:\n",
+    "        dict_prod_bus[productdate_idx] = {}\n",
+    "        for busdate_idx in [0,1]:\n",
+    "            print(f\"busdate_idx = {busdate_idx}   | productdate_idx = {productdate_idx}\")\n",
+    "            if (busdate_idx == 1) and (productdate_idx == 1):\n",
+    "                # No need to request data for this case so we skip this iteration\n",
+    "                break\n",
+    "\n",
+    "            if (busdate_idx == 0) and (productdate_idx == 0):\n",
+    "                contractsCall_aux_df =  pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Call_Front\")\n",
+    "                contractsPut_aux_df =  pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Put_Front\")\n",
+    "\n",
+    "            if (busdate_idx == 1) and (productdate_idx == 0):\n",
+    "                contractsCall_aux_df= pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}CallFront-1\")\n",
+    "                contractsPut_aux_df = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}PutFront-1\")\n",
+    "\n",
+    "            if (busdate_idx == 0) and (productdate_idx == 1):\n",
+    "                contractsCall_aux_df = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Put+01\")\n",
+    "                contractsPut_aux_df= pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Call+01\")\n",
+    "\n",
+    "\n",
+    "            aux_df = contractsCall_aux_df[['strike','openInterest']].merge(\n",
+    "                contractsPut_aux_df[['strike','openInterest']],\n",
+    "                on = \"strike\",\n",
+    "                how=\"left\",\n",
+    "                suffixes=('_CF', '_PF')\n",
+    "            )\n",
+    "            dict_prod_bus[productdate_idx][busdate_idx] = aux_df\n",
+    "    return auswahl, heute, expiry, expiry_1, stock_price, InterestRate, volatility, ZentralKurs, tage_bis_verfall, nbd_dict, dict_prod_bus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heute = 13/09/2023\n",
+      "################## Obtaining overview ##################\n",
+      "DAX\n",
+      "Getting data from EUREX...\n",
+      "try = 0\n",
+      "################## Obtaining contracts ##################\n",
+      "busdate_idx = 0   | productdate_idx = 0 | try = 0\n",
+      "busdate_idx = 1   | productdate_idx = 0 | try = 0\n",
+      "busdate_idx = 0   | productdate_idx = 1 | try = 0\n",
+      "busdate_idx = 0   | productdate_idx = 1 | try = 1\n",
+      "busdate_idx = 1   | productdate_idx = 1 | try = 0\n",
+      "tage_bis_verfall = 2\n",
+      "stock_price = 15653.5\n",
+      "Minkurs = 14500.0\n",
+      "Maxkurs = 16500.0\n",
+      "Schritte = 40\n",
+      "ZentralKurs = 15500.0\n",
+      "volatility_Laufzeit = 60\n",
+      "Euribor 3M in 9/12/2023 is 3.824 %\n",
+      "vdax-new-2m = 15.49 PTS\n",
+      "volatility = 0.1549\n",
+      "InterestRate = 0.038239999999999996\n",
+      "Excel files have been exported.\n"
+     ]
+    }
+   ],
+   "source": [
+    "auswahl, heute, expiry, expiry_1, stock_price, InterestRate, volatility, ZentralKurs, tage_bis_verfall, nbd_dict, dict_prod_bus, list_email_send_selection, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, delta, future_date_col = parse_eurex(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -249,8 +360,7 @@
     "HedgeBedarf1_df = pd.DataFrame(data =HedgeBedarf1_values, columns= Basis)\n",
     "HedgeSum1_df = pd.DataFrame(HedgeSum_1,columns=[\"HedgeSum\"])\n",
     "HedgeBedarf1_df = pd.concat([HedgeBedarf_kurs,HedgeSum1_df,HedgeBedarf1_df], axis=1)\n",
-    "\n",
-    "# Fourth Stage"
+    "\n"
    ]
   },
   {
@@ -2009,7 +2119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.4 | packaged by Anaconda, Inc. | (main, Jul  5 2023, 13:47:18) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
