--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -18,62 +18,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auswahl = 1\n",
-    "result = read_pickle(os.path.join(temp_results_path,f'{dict_index_stock[auswahl]}.pickle'))\n",
+    "\"\"\"\n",
+    "This python script is used to compare the results of the python script with the excel files.\n",
+    "It also generates the pdf files for the results of the python script.\n",
+    "The function parse_excel is used to parse the excel files. Thefore the function parse_eurex is not tested by this script.\n",
+    "Requirements:\n",
+    "    - The excel files use version 9.00 format.\n",
+    "\"\"\"\n",
     "\n",
-    "auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = result\n",
+    "# Sufixes used to read the excel files\n",
+    "dict_auswahl_sufix = {0 : \"\", 1 : \"STOXX_\"}\n",
     "\n",
-    "Summery_df, HedgeBedarf_df, HedgeBedarf1_df, Ueberhaenge_df, delta= hedge(auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, dict_prod_bus, stock_price, expiry, expiry_1, heute)\n",
-    "\n",
-    "file_path = os.path.join(current_results_path, f\"{heute.strftime('%Y_%m_%d')}_{dict_index_stock[auswahl]}.pdf\")\n",
-    "\n",
-    "generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1, file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_auswahl_prefix = {0 : \"\", 1 : \"STOXX_\"}\n",
-    "\n",
-    "\n",
+    "# List of files to be read\n",
     "list_files = glob(\"./excel_files/*.xlsm\")\n",
+    "\n",
+    "# List of files where the results of the python are not equal to the excel files\n",
     "list_error_files = []\n",
     "\n",
     "for excel_path in  list_files: #['./excel_files/T_OI-Abfrage 2023-09-19 V9.00.xlsm']: \n",
+    "    print(f\"excel_path = {excel_path}\")\n",
     "\n",
+    "    # Select the option based on the name of the excel file\n",
     "    if \"stoxx\" in excel_path.lower():\n",
     "        auswahl = 1\n",
     "    else:\n",
     "        auswahl = 0\n",
     "\n",
-    "    # These values are not tested by these script\n",
+    "    # Use the function parse_excel to parse the excel file\n",
     "    auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = parse_excel(auswahl, excel_path)\n",
     "    \n",
     "\n",
-    "\n",
+    "    # Read the results of the python script\n",
     "    Summery_df, HedgeBedarf_df, HedgeBedarf1_df, Ueberhaenge_df, delta= hedge(auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, dict_prod_bus, stock_price, expiry, expiry_1, heute)\n",
     "\n",
+    "\n",
+    "    # Generate the pdf files\n",
+    "    generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)\n",
+    "\n",
+    "\n",
+    "    # Select the columns to be compared\n",
     "    summery_cols = ['Basis', 'Änderung', 'heute', 'last_day']\n",
-    "    file_path = os.path.join(current_results_path, f\"{heute.strftime('%Y_%m_%d')}_{dict_index_stock[auswahl]}.pdf\")\n",
-    "    generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1, file_path)\n",
     "    Summery_df = Summery_df[summery_cols]\n",
     "\n",
-    "\n",
-    "    HedgeBedarf_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}HedgeBedarf\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})\n",
-    "\n",
+    "    ################################## Read excel files ##################################\n",
+    "    HedgeBedarf_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}HedgeBedarf\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})\n",
     "    del HedgeBedarf_excel['Unnamed: 1']\n",
     "    \n",
-    "    HedgeBedarf1_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}HedgeBedarf+01\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})[['Basis', 'HedgeSum']]\n",
+    "    HedgeBedarf1_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}HedgeBedarf+01\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})[['Basis', 'HedgeSum']]\n",
     "\n",
-    "\n",
-    "    Summery_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Summery\",skiprows=8).iloc[:,[0,1,2,3]]\n",
+    "    Summery_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_sufix[auswahl]}Summery\",skiprows=8).iloc[:,[0,1,2,3]]\n",
     "    Summery_excel.columns = summery_cols\n",
     "    Summery_excel = Summery_excel[pd.to_numeric(Summery_excel.Basis, errors= 'coerce').notna()]\n",
+    "    ##########################################################################################\n",
     "\n",
-    "\n",
+    "    ############ Compare the results of the python script with the excel files ###############\n",
     "    compare1_df = HedgeBedarf_df[['Basis', 'HedgeSum']].merge(HedgeBedarf_excel[['Basis', 'HedgeSum']], on = 'Basis',suffixes=('_py', '_excel'))\n",
     "    # Biggest difference between python and excel\n",
     "    (compare1_df.HedgeSum_py - compare1_df.HedgeSum_excel).abs().max()\n",
@@ -86,9 +84,9 @@
     "    compare2_df['dif'] = (compare2_df.HedgeSum_py - compare2_df.HedgeSum_excel).abs()\n",
     "    max_dif2  = compare2_df.dif.abs().max()\n",
     "\n",
-    "\n",
     "    compare3_df = Summery_excel.merge(Summery_df, on = 'Basis', suffixes = ('_excel', '_python'))\n",
-    "\n",
+    "    ##########################################################################################\n",
+    "    \n",
     "    list_max = []\n",
     "    for col in Summery_df.columns[1:]:\n",
     "        list_max.append((compare3_df[f'{col}_excel'] - compare3_df[f'{col}_python']).abs().max())\n",
@@ -98,9 +96,31 @@
     "\n",
     "    if max(max_dif1, max_dif2, max_dif3) > 1e-6:\n",
     "        list_error_files.append(excel_path)\n",
-    "        raise ValueError(\"Excel and python results are not the same\")\n",
-    "    print(\"Both files are the same.\")\n",
+    "        print(\"Excel and python results are not the same\")\n",
+    "    print(\"Both files are the same.\")   \n",
+    "\n",
+    "\n",
     "print(list_error_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "The following code is used to read the pickle files and generate the pdf files. No test is performed.\n",
+    "\"\"\"\n",
+    "\n",
+    "auswahl = 0\n",
+    "result = read_pickle(os.path.join(temp_results_path,f'{dict_index_stock[auswahl]}.pickle'))\n",
+    "\n",
+    "auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = result\n",
+    "\n",
+    "Summery_df, HedgeBedarf_df, HedgeBedarf1_df, Ueberhaenge_df, delta= hedge(auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, dict_prod_bus, stock_price, expiry, expiry_1, heute)\n",
+    "\n",
+    "generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1)"
    ]
   }
  ],
@@ -120,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.4 | packaged by Anaconda, Inc. | (main, Jul  5 2023, 13:47:18) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
