--- a/pdfs.ipynb
+++ b/pdfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,24 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minkurs = 3775.0\n",
-      "Maxkurs = 4475.0\n",
-      "Schritte = 28\n",
-      "volatility_Laufzeit = 365\n",
-      "Tage = 24\n",
-      "Tage_1 = 51\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "auswahl = 1\n",
+    "auswahl = 0\n",
     "result = read_pickle(os.path.join(temp_results_path,f'{dict_index_stock[auswahl]}.pickle'))\n",
     "\n",
     "auswahl, ZentralKurs, volatility, InterestRate, tage_bis_verfall, nbd_dict, dict_prod_bus, stock_price, expiry, expiry_1, heute, list_email_send_selection, future_date_col = result\n",
@@ -41,42 +28,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PDF has been generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#def generate_pdfstest(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1, file_path):\n",
+    "#def generate_pdfs(auswahl, Summery_df, HedgeBedarf_df, HedgeBedarf1_df, stock_price, heute, nbd_dict, tage_bis_verfall, delta, expiry, expiry_1):\n",
     "\n",
     "# Fifth stage\n",
-    "# Values to create arrow\n",
-    "idx_closest = (HedgeBedarf_df.Basis - stock_price).abs().idxmin()\n",
-    "closest_Basis =  HedgeBedarf_df.loc[idx_closest,\"Basis\"]\n",
-    "hedge_sum = HedgeBedarf_df.HedgeSum + HedgeBedarf1_df.HedgeSum\n",
-    "closest_Sum = hedge_sum.loc[idx_closest]\n",
-    "\n",
-    "x_axis_length = hedge_sum.max() - hedge_sum.min()\n",
-    "y_axis_length = HedgeBedarf_df.Basis.max() - HedgeBedarf_df.Basis.min()\n",
-    "\n",
     "min_Kontrakte = 5000\n",
-    "max_Differenz = 1000\n",
     "prozentual = 0.2\n",
     "\n",
+    "\n",
     "dict_verfall_sufix= {\n",
-    "    True : \"_verfall\",\n",
-    "    False : \"\"\n",
+    "    \"detailed\" : \"_verfall\",\n",
+    "    \"complete\" : \"\",\n",
+    "    \"basic\" : \"_basic\"\n",
     "}\n",
     "\n",
-    "is_close_verfall =  tage_bis_verfall < 5\n",
-    "for is_detailed in [False, True]:\n",
-    "    if is_detailed:\n",
+    "# True if the expiry is close\n",
+    "is_close_verfall =  tage_bis_verfall < 5 \n",
+    "\n",
+    "# Report format for which the images will be generated => images for complete report format are always generated\n",
+    "report_formats = ['complete']\n",
+    "\n",
+    "# PDF formats => complete is always generated\n",
+    "pdf_formats = ['complete']\n",
+    "\n",
+    "if auswahl == 0:\n",
+    "    # Also generate images basic report format\n",
+    "    report_formats.append('basic')\n",
+    "\n",
+    "    # Also generate basic report pdf format\n",
+    "    pdf_formats.append('basic')\n",
+    "\n",
+    "if is_close_verfall:\n",
+    "    # Also generate images detailed report format. This is only done if the expiry is close\n",
+    "    # These images have to be the last ones to be generated because the dataframes are clipped\n",
+    "    # around the stock price. This requirment can be removed if we make a copy of the dataframes.\n",
+    "    report_formats.append('detailed')\n",
+    "\n",
+    "\n",
+    "# Generate images for each report format\n",
+    "for report_format in report_formats:\n",
+    "\n",
+    "    if report_format == 'detailed':\n",
+    "        ################## Select 10 values above and below the stock price ##################\n",
     "        indexes = Summery_df.loc[(Summery_df.Basis >= stock_price)].tail(10).index.to_list() + Summery_df.loc[(Summery_df.Basis < stock_price)].head(10).index.to_list()\n",
     "        Summery_df =  Summery_df.loc[indexes].reset_index(drop=True)\n",
     "\n",
@@ -84,20 +80,43 @@
     "        \n",
     "        HedgeBedarf_df = HedgeBedarf_df.loc[indexes].reset_index(drop=True)\n",
     "        HedgeBedarf1_df = HedgeBedarf1_df.loc[indexes].reset_index(drop=True)\n",
+    "        \n",
+    "        ######################################################################################\n",
     "\n",
-    "    # (CF > min_Kontrakte) AND (PF > min_Kontrakte) AND (ABS(CF - PF)  < MIN(PF,CF)*)\n",
-    "    mask_highlights = (\n",
-    "        (Summery_df.openInterest_CF > min_Kontrakte) & \n",
-    "        (Summery_df.openInterest_PF > min_Kontrakte) & \n",
-    "        (\n",
-    "            (Summery_df.openInterest_CF - Summery_df.openInterest_PF).abs() < \n",
-    "            (Summery_df[['openInterest_PF',\"openInterest_CF\"]].min(axis=1)*prozentual)))\n",
     "\n",
+    "    # Closest index to the stock price\n",
+    "    idx_closest = (HedgeBedarf_df.Basis - stock_price).abs().idxmin()\n",
+    "\n",
+    "    # Closest Basis to the stock price\n",
+    "    closest_Basis =  HedgeBedarf_df.loc[idx_closest,\"Basis\"]\n",
+    "\n",
+    "    # Define w\n",
+    "    if report_format == 'basic':\n",
+    "        line_to_point = HedgeBedarf_df.HedgeSum\n",
+    "        line_to_point_legend_name = expiry.strftime(\"%Y-%m\") \n",
+    "    else:\n",
+    "        # report_format == 'complete' or report_format == 'detailed\n",
+    "        hedge_sum = HedgeBedarf_df.HedgeSum + HedgeBedarf1_df.HedgeSum\n",
+    "        line_to_point = hedge_sum\n",
+    "        line_to_point_legend_name = expiry.strftime(\"%Y-%m\") + \" + \"+ expiry_1.strftime(\"%Y-%m\")\n",
+    "\n",
+    "    # Where to point the arrow\n",
+    "    value_to_point = line_to_point.loc[idx_closest]   \n",
     "\n",
     "    ################################## Hilights for Basis column ####################################\n",
     "\n",
     "    Summery_df[\"basis_color\"] = \"lavender\"\n",
-    "    if not is_detailed:\n",
+    "    if report_format == 'complete':\n",
+    "        # (CF > min_Kontrakte) AND (PF > min_Kontrakte) AND (ABS(CF - PF)  < MIN(PF,CF)*)\n",
+    "        mask_highlights = (\n",
+    "            (Summery_df.openInterest_CF > min_Kontrakte) & \n",
+    "            (Summery_df.openInterest_PF > min_Kontrakte) & \n",
+    "            (\n",
+    "                (Summery_df.openInterest_CF - Summery_df.openInterest_PF).abs() < \n",
+    "                (Summery_df[['openInterest_PF',\"openInterest_CF\"]].min(axis=1)*prozentual))\n",
+    "            )\n",
+    "        \n",
+    "        # Highlight the Basis\n",
     "        Summery_df.loc[\n",
     "            mask_highlights, \"basis_color\"] = \"yellow\"\n",
     "    col_basis_color = Summery_df.basis_color.to_numpy()\n",
@@ -145,7 +164,7 @@
     "    values_header = bold([\"Basis\",\"Änderung\",nbd_dict['heute'].strftime(\"%d/%m/%y\"),nbd_dict['last'].strftime(\"%d/%m/%y\")])\n",
     "\n",
     "\n",
-    "    if not  is_detailed:\n",
+    "    if report_format == 'complete':\n",
     "        values_body += [(Summery_df.openInterest_PF), (Summery_df.openInterest_CF)]\n",
     "        values_header += bold([\"Put\",\"Call\"])\n",
     "\n",
@@ -164,7 +183,7 @@
     "                    # Header style\n",
     "                    fill_color='paleturquoise',\n",
     "                        align='center',\n",
-    "                        font = {'size': int(font_size*0.8)},\n",
+    "                        font = {'size': 14},\n",
     "                        height = row_height,\n",
     "                ),\n",
     "\n",
@@ -195,12 +214,14 @@
     "        margin=dict(l=0,r=0,b=0.0,t=0)\n",
     "    )\n",
     "\n",
-    "    fig.write_image(os.path.join(current_results_path,f'image_table{dict_verfall_sufix[is_detailed]}.svg'),scale=1)\n",
+    "    fig.write_image(os.path.join(temp_results_path,f'image_table{dict_verfall_sufix[report_format]}.svg'),scale=1)\n",
     "\n",
     "\n",
+    "    # Length x axis\n",
+    "    x_axis_length = line_to_point.max() - line_to_point.min()\n",
     "    data =  [\n",
     "\n",
-    "        # Create 0  y axis\n",
+    "        # This plot the 0 line\n",
     "        go.Scatter(\n",
     "            x = [0,0], \n",
     "            y = [HedgeBedarf_df.Basis.min(), HedgeBedarf_df.Basis.max()],\n",
@@ -209,26 +230,34 @@
     "            showlegend = False\n",
     "        ),\n",
     "\n",
-    "        go.Scatter(\n",
-    "            x = hedge_sum,\n",
-    "            y = HedgeBedarf_df.Basis,\n",
-    "            mode = \"lines\",\n",
-    "            name =expiry.strftime(\"%Y-%m\") + \" + \"+ expiry_1.strftime(\"%Y-%m\"),\n",
-    "            marker_color= \"blue\"\n",
-    "        ),\n",
     "\n",
-    "    go.Scatter(\n",
-    "        x = [closest_Sum + x_axis_length/5,closest_Sum + x_axis_length/50], \n",
+    "        # This plot the arrow pointing to line_to_point\n",
+    "        go.Scatter(\n",
+    "        x = [value_to_point + x_axis_length/5,value_to_point + x_axis_length/50], \n",
     "        y = [closest_Basis,closest_Basis],\n",
     "        marker= dict(size=20,symbol= \"arrow-bar-up\", angleref=\"previous\"),\n",
     "        marker_color = \"red\",\n",
     "        showlegend = False\n",
+    "    ),\n",
+    "\n",
+    "\n",
+    "        go.Scatter(\n",
+    "        x = line_to_point,\n",
+    "        y = HedgeBedarf_df.Basis,\n",
+    "        mode = \"lines\",\n",
+    "        name = line_to_point_legend_name,\n",
+    "        marker_color= \"blue\"\n",
     "    )\n",
+    "\n",
     "    ]\n",
-    "    \n",
-    "    min_x_list = [hedge_sum.min()]\n",
-    "    max_x_list = [hedge_sum.max()]\n",
-    "    if not is_detailed:\n",
+    "\n",
+    "\n",
+    "    # Define range for x axis\n",
+    "    min_x_list = [line_to_point.min()]\n",
+    "    max_x_list = [line_to_point.max()]\n",
+    "\n",
+    "    # If the report is complete, add the second line\n",
+    "    if report_format == 'complete':\n",
     "        min_x_list.append(HedgeBedarf1_df.HedgeSum.min())\n",
     "        max_x_list.append(HedgeBedarf1_df.HedgeSum.max())\n",
     "        data += [\n",
@@ -242,13 +271,11 @@
     "        ]\n",
     "\n",
     "    ##################################################################################################\n",
-    "    dx =  0.1*(hedge_sum.max() - hedge_sum.min())\n",
     "\n",
-    "\n",
+    "    # Margin to the x axis\n",
+    "    dx =  0.2*(hedge_sum.max() - hedge_sum.min())\n",
     "\n",
     "    fig = go.Figure(data=data)\n",
-    "\n",
-    "    #mask = HedgeBedarf_df.index % round(HedgeBedarf_df.shape[0]/40) == 0\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=0,r=0,b=0.1,t=row_height),\n",
     "        # Set limits in the x and y axis\n",
@@ -283,13 +310,13 @@
     "    )\n",
     "\n",
     "\n",
-    "    fig.write_image(os.path.join(current_results_path,f'image_graph{dict_verfall_sufix[is_detailed]}.svg'),scale=1)\n",
+    "    fig.write_image(os.path.join(temp_results_path,f'image_graph{dict_verfall_sufix[report_format]}.svg'),scale=1)\n",
     "\n",
     "\n",
     "\n",
     "    fig = go.Figure()\n",
     "\n",
-    "    if not is_detailed:\n",
+    "    if report_format == 'complete':\n",
     "        fig.add_trace(\n",
     "            trace = go.Bar(name='Put', y=Summery_df.Basis, x=-Summery_df.openInterest_PF,orientation='h', marker_color = 'rgb(40, 164, 40)'),\n",
     "        )\n",
@@ -321,48 +348,9 @@
     "    fig.update_xaxes(visible=False)\n",
     "    fig.update_yaxes(visible=False)\n",
     "\n",
-    "    fig.write_image(os.path.join(current_results_path,f'image_bar{dict_verfall_sufix[is_detailed]}.svg'),scale=1)\n",
+    "    fig.write_image(os.path.join(temp_results_path,f'image_bar{dict_verfall_sufix[report_format]}.svg'),scale=1)\n",
     "\n",
     "\n",
-    "    with open(src_html) as file:\n",
-    "        template = file.read()\n",
-    "\n",
-    "    if not is_close_verfall:\n",
-    "        subst = \"\"\n",
-    "        regex = r\"\\$BEGIN_DETAIL\\$.*\\$END_DETAIL\\$\"\n",
-    "        template = re.sub(regex, subst, template, 0, re.MULTILINE | re.DOTALL)\n",
-    "    else:\n",
-    "        template = template.replace(\"$BEGIN_DETAIL$\", \"\").replace(\"$END_DETAIL$\", \"\")\n",
-    "\n",
-    "    dict_title = {\n",
-    "        0 : \"OpenInterest und HedgeBedarf\",\n",
-    "        1 : \"STOXX 50 OpenInterest und HedgeBedarf\",\n",
-    "    }\n",
-    "\n",
-    "    # Replace specific characters in the template by values\n",
-    "    dict_raplace = {\n",
-    "        \"$PUT_SUM$\": int(Summery_df.openInterest_PF.sum()),\n",
-    "        \"$CALL_SUM$\": int(Summery_df.openInterest_CF.sum()),\n",
-    "        \"$TBF$\": tage_bis_verfall,\n",
-    "        \"$DELTA$\":str(delta).replace(\".\",\",\"),\n",
-    "        \"$DATE$\": heute.strftime(\"%d/%m/%Y\"),\n",
-    "        \"$FRONT_DATE$\" : expiry.strftime(\"%Y-%m\"),\n",
-    "        \"$TITLE$\" : dict_title[auswahl],\n",
-    "        \"$HEADER_COLOR$\" : \"background-color: rgb(12, 89, 177)\"\n",
-    "    }\n",
-    "\n",
-    "    for key, value in dict_raplace.items():\n",
-    "        template = template.replace(key, str(value))\n",
-    "\n",
-    "\n",
-    "    result_html = {True:summery_html, False: summery_verfall_html}[is_detailed]\n",
-    "\n",
-    "    # Export html file\n",
-    "    with open(result_html,'w') as file:\n",
-    "        file.write(template)\n",
-    "\n",
-    "    # Results files\n",
-    "    \n",
     "dict_auswahl_colors = {\n",
     "    0 : {\"$HEADER_COLOR$\":\"\", \"$FUTURE_COLOR$\":\"background-color: rgb(0, 174, 255);\",\"$FONT_COLOR$\":\"color: black;\"},\n",
     "    1 : {\"$HEADER_COLOR$\":\"background-color: rgb(12, 89, 177);\", \"$FUTURE_COLOR$\":\"\", \"$FONT_COLOR$\" : \"color: white;\"},\n",
@@ -378,11 +366,77 @@
     "    file.write(css_file)\n",
     "\n",
     "\n",
-    "file_path = os.path.join(current_results_path, f\"test.pdf\")\n",
-    "converter.convert(\"file://\" + os.path.join(os.getcwd(),result_html), file_path)\n",
-    "#shutil.copyfile(list_pdf_files[0], list_pdf_files[1])\n",
+    "dict_html_sections = {\n",
+    "    \"complete_report\" : \"COMPLETE_REPORT\", \n",
+    "    \"detailed_report\": \"DETAIL\",\n",
+    "    \"basic_report\"   : \"BASIC\",\n",
+    "    \"after_report\"   : \"AFTER_REPORT\"\n",
+    "}\n",
     "\n",
-    "print(\"PDF has been generated.\")"
+    "\n",
+    "dict_title = {\n",
+    "    0 : \"OpenInterest und HedgeBedarf\",\n",
+    "    1 : \"STOXX 50 OpenInterest und HedgeBedarf\",\n",
+    "}\n",
+    "\n",
+    "# Replace specific characters in the template by values\n",
+    "dict_raplace = {\n",
+    "    \"$DATE$\": heute.strftime(\"%d/%m/%Y\"),\n",
+    "    \"$PUT_SUM$\": int(Summery_df.openInterest_PF.sum()),\n",
+    "    \"$CALL_SUM$\": int(Summery_df.openInterest_CF.sum()),\n",
+    "    \"$TBF$\": tage_bis_verfall,\n",
+    "    \"$DELTA$\":str(delta).replace(\".\",\",\"),\n",
+    "    \"$FRONT_DATE$\" : expiry.strftime(\"%Y-%m\"),\n",
+    "    \"$TITLE$\" : dict_title[auswahl],\n",
+    "    \"$HEADER_COLOR$\" : \"background-color: rgb(12, 89, 177)\"\n",
+    "}\n",
+    "\n",
+    "with open(src_html) as file:\n",
+    "    template_original = file.read()\n",
+    "\n",
+    "template_replaced_values = template_original\n",
+    "\n",
+    "\n",
+    "for key, value in dict_raplace.items():\n",
+    "    template_replaced_values = template_replaced_values.replace(key, str(value))\n",
+    "\n",
+    "\n",
+    "\n",
+    "for pdf_format in pdf_formats:\n",
+    "    template = template_replaced_values\n",
+    "    if pdf_format == \"basic\":\n",
+    "        maintain_html_list = [\"basic_report\"]\n",
+    "\n",
+    "    elif pdf_format == \"complete\":\n",
+    "        maintain_html_list = [\"complete_report\", \"after_report\"]\n",
+    "        if is_close_verfall:\n",
+    "            maintain_html_list.append(\"detailed_report\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "    for html_section, html_section_name in dict_html_sections.items():\n",
+    "        if html_section in maintain_html_list:\n",
+    "            template = template.replace(f\"$BEGIN_{html_section_name}$\", \"\").replace(f\"$END_{html_section_name}$\", \"\")\n",
+    "        else:\n",
+    "            subst = \"\"\n",
+    "            regex = f\"\\$BEGIN_{html_section_name}\\$.*\\$END_{html_section_name}\\$\"\n",
+    "            template = re.sub(regex, subst, template, 0, re.MULTILINE | re.DOTALL)\n",
+    "    \n",
+    "\n",
+    "    result_html = os.path.join(temp_results_path,\"output.html\")\n",
+    "\n",
+    "\n",
+    "    # Export html file\n",
+    "    with open(result_html,'w') as file:\n",
+    "        file.write(template)\n",
+    "\n",
+    "\n",
+    "    pdf_suffix = {\"complete\":\"\", \"basic\":\"_basic\"}[pdf_format]\n",
+    "    file_path = os.path.join(current_results_path, f\"{dict_index_stock[auswahl]}_{heute.strftime('%d_%m_%Y')}{pdf_suffix}.pdf\")\n",
+    "\n",
+    "    converter.convert(\"file://\" + os.path.join(os.getcwd(),result_html), file_path)\n",
+    "\n",
+    "    print(\"PDF has been generated.\")"
    ]
   }
  ],
