--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -2,14 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import *\n",
     "from variables import *\n",
     "from utils import parse_excel, read_pickle\n",
-    "from glob import glob"
+    "from glob import glob\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"snapshot__value-current realtime-push\" id=\"snapshot-value-fst-current-0\">\n",
+       " <span class=\"snapshot__value\" data-sg-realtime-push=\"\" data-sg-realtime-push-no-state-update=\"\" data-sg-realtime-push-start-listener=\"true\">\n",
+       " \t\t\t\t\t\t18,80\n",
+       " \t\t\t\t\t</span>\n",
+       " <span class=\"snapshot__value-unit\">PKT</span>\n",
+       " </span>]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_idx = 0\n",
+    "\n",
+    "dict_stock_names = {\n",
+    "    0 : 'vdax-new-2m',\n",
+    "    1 : 'vstoxx'\n",
+    "    }\n",
+    "stock = dict_stock_names[stock_idx]\n",
+    "#accepted values for stock: , \n",
+    "headers = {\n",
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36'\n",
+    "}\n",
+    "response = requests.get('https://www.finanzen.net/index/' + stock, headers=headers)\n",
+    "html = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "aux = BeautifulSoup.findAll(html,id = 'snapshot-value-fst-current-0')\n",
+    "aux "
    ]
   },
   {
@@ -140,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4 | packaged by Anaconda, Inc. | (main, Jul  5 2023, 13:47:18) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
